--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -353,13 +353,15 @@ a {
   display: flex;
   width: 100vw;
   height: 200rem;
+  padding-right: 12rem;
+  padding-left: 24rem;
   justify-content: space-between;
 }
 
 .profile__top-left {
   position: relative;
   display: flex;
-  width: 240rem;
+  width: 200rem;
   height: 200rem;
 }
 
@@ -401,22 +403,11 @@ a {
 
 .profile__load-img {
   display: block;
-  position: relative;
-  width: 40rem;
-  height: 200rem;
-}
-
-.profile__load-img span {
-  z-index: 2;
   position: absolute;
-  left: -60rem;
-  top: 87rem;
-  width: max-content;
-  font-weight: 400;
-  font-size: 18rem;
-  line-height: 20rem;
-  color: #28353E;
-  transform: rotate(-90deg);
+  width: 30rem;
+  height: 30rem;
+  top: 0;
+  right: 0;
 }
 
 .profile__load-img svg{
@@ -510,7 +501,6 @@ a {
   border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: transparent;
   resize: none;
-  color:#fff;
 }
 
 .profile__repost-tab {
