--- a/player/templates/player/redesign/player_repost.html
+++ b/player/templates/player/redesign/player_repost.html
@@ -8,7 +8,7 @@
 <div class="ct__s">
     <h2 class="ct__s-title">запись для репоста</h2>
     <p class="ct__s-text">
-        <a href="">перейти к записи (ссылка)</a>
+        <a href="https://vk.com/wall-164930433_3519">перейти к записи (ссылка)</a><br>
         Для получения золота запись должна: <br>
         - быть первой сверху (не считая закрепа) <br>
         - пробыть на стене не меньше часа <br>
