--- a/player/templates/player/redesign/player_status.html
+++ b/player/templates/player/redesign/player_status.html
@@ -2,7 +2,7 @@
 {% load static %}
 <header class="info">
 
-	<a href="profile" class="info__profile-link">
+	<a href="/profile" class="info__profile-link">
 		<img {% if player.image %}src="{{ player.image.url }}"{% else %}src="{% static 'img/nopic.png' %}"{% endif %} class="info__ava"> <!-- аватар игрока -->
 	</a>
 
