фикс ссылки места жительства

--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -110,7 +110,7 @@
 				<div class="ct__s">
 					<h2 class="ct__s-title">место жительства</h2>
 					<p class="ct__s-text">
-						<a href="##">
+						<a href="/region/{{ player.region.pk }}/">
 							{{ player.region }}
 						</a>
 					</p>
