--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -115,6 +115,18 @@
 				</div>
 
 				<div class="ct__s">
+					<h2 class="ct__s-title">навыки</h2>
+					<p class="ct__s-text">
+						<font color="FF0000">{{ player.power }}</font>
+						/
+						<font color="337AB7">{{ player.knowledge }}</font>
+						/
+						<font color="#18D04C">{{ player.endurance }}</font>
+					</p>
+				</div>
+
+
+				<div class="ct__s">
 					<h2 class="ct__s-title">место жительства</h2>
 					<p class="ct__s-text">
 						<a href="/region/{{ player.region.pk }}/">
