--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -722,6 +722,326 @@ a {
   margin: 0 auto;
 }
 
+
+/*! Store */
+
+.store {
+  padding-top: 14rem;
+  padding-bottom: 24rem;
+  height: calc(100vh - 60rem);
+  overflow-y: auto;
+}
+
+.store__tabs {
+  margin-bottom: 24rem;
+}
+
+.store__wrapper-overflow {
+  width: 100vw;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.store__wrapper {
+  display: flex;
+  transition: all 0.5s ease;
+}
+
+.store__left {
+  width: 100vw;
+  flex-shrink: 0;
+}
+
+.store__exch-wrapper {
+  position: relative;
+  display: grid;
+  padding: 0 12rem;
+  grid-template-columns: 1fr 41rem 1fr;
+  width: 312rem;
+  height: 100rem;
+  margin: 0 auto;
+  margin-bottom: 30rem;
+}
+
+.store__exch-wrapper button {
+  z-index: 2;
+  position: relative;
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+  width: 41rem;
+  height: 60rem;
+  margin-top: -3rem;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+}
+
+.store__exch-wrapper svg {
+  width: 100%;
+  height: 100%;
+}
+
+.store__exch-left-text {
+  z-index: 2;
+  position: relative;
+  margin-top: 12rem;
+  font-size: 18rem;
+  line-height: 1;
+}
+
+.store__exch-right-text {
+  z-index: 2;
+  position: relative;
+  margin-top: 12rem;
+  font-size: 18rem;
+  line-height: 1;
+  text-align: right;
+}
+
+.store__exch-wrapper svg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.store__num-left,
+.store__num-right {
+  z-index: 2;
+  position: relative;
+  display: block;
+  width: 116rem;
+  height: 24rem;
+  padding: 0 5rem;
+  font-size: 14rem;
+  line-height: 24rem;
+  outline: none;
+  color: var(--c10one);
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.store__num-right {
+  margin-left: auto;
+}
+
+.store__num-left:focus,
+.store__num-right:focus {
+  border: 1px solid var(--c10one);
+}
+
+.store__exch-wrapper p {
+  grid-column: 1 / 4;
+  z-index: 2;
+  position: relative;
+  margin: 0;
+  font-size: 14rem;
+  line-height: 14rem;
+  text-align: center;
+  letter-spacing: -0.04em;
+  color: var(--c10one);
+}
+
+.store__exch-wrapper p span {
+  color: var(--c10two);
+}
+
+.store__list {
+  padding: 0 24rem;
+  list-style: none;
+  display: grid;
+  align-items: center;
+  row-gap: 12rem;
+  font-size: 14rem;
+  color: var(--c10one);
+}
+
+.store__item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.store__item p {
+  margin: 0;
+  font-weight: 300;
+}
+
+.store__bar {
+  position: relative;
+  width: 150rem;
+  height: 16rem;
+  border: 1px solid var(--c10two);
+}
+
+.store__bar-fill {
+  z-index: 1;
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: var(--c10two);
+}
+
+.store__bar span {
+  z-index: 2;
+  position: relative;
+  display: block;
+  width: 100%;
+  font-size: 14rem;
+  line-height: 16rem;
+  text-align: center;
+  letter-spacing: -0.04em;
+  color: var(--c10one);
+  text-shadow: -1px -1px 0px var(--c60);
+}
+
+.store__right {
+  width: 100vw;
+  flex-shrink: 0;
+}
+
+.store__right-title {
+  margin-top: 10rem;
+  font-size: 18rem;
+  line-height: 18rem;
+  font-weight: 400;
+  text-align: center;
+  letter-spacing: -0.04em;
+  color: var(--c10one);
+  width: 100%;
+}
+
+.store__right-block {
+  position: relative;
+  width: 312rem;
+  height: 100rem;
+  margin: 0 auto;
+  padding: 12rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.store__right-block span {
+  z-index: 2;
+  position: relative;
+  color: var(--c10one);
+  font-size: 14rem;
+  line-height: 14rem;
+  letter-spacing: -0.04em;
+  color: #FFFFFF;
+}
+
+.store__right-block span i{
+  color: var(--c10two);
+  font-style: normal;
+}
+
+.store__right-block input {
+  z-index: 2;
+  position: relative;
+  width: 100%;
+  height: 16rem;
+  cursor: pointer;
+  display: block;
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+}
+
+.store__right-block input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 16rem;
+  width: 16rem;
+  margin-top: -7rem;
+  border-radius: 50%;
+  background-color: var(--c10two);
+}
+
+.store__right-block input::-moz-range-thumb {
+  -webkit-appearance: none;
+  margin-top: -7rem;
+  height: 16rem;
+  width: 16rem;
+  border-radius: 50%;
+  background-color: var(--c10two);
+}
+
+.store__right-block input::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2rem;
+  cursor: pointer;
+  background: var(--c10two);
+}
+
+.store__right-block input::-moz-range-track {
+  width: 100%;
+  height: 2rem;
+  cursor: pointer;
+  background: var(--c10two);
+}
+
+.store__create-btn {
+  z-index: 2;
+  position: relative;
+  align-self: center;
+  margin: 0 auto;
+  margin-top: 8rem;
+}
+
+.store__right-block svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.store__wp-wrapper {
+  margin-top: 40rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 18rem;
+  position: relative;
+}
+
+.store__wp-wrapper-r {
+  display: flex;
+  align-items:  center;
+  flex-direction: column;
+  padding: 0 24rem;
+  justify-content: space-evenly;
+  margin-top: -4rem;
+}
+
+.store__wp-wrapper picture {
+  display: block;
+  width: 80rem;
+  height: 80rem;
+}
+
+.store__wp-wrapper picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+
+.store__wp-wrapper h2 {
+  font-size: 24rem;
+  line-height: 1;
+  color: transparent;
+  font-weight: 400;
+  text-align: center;
+  width: 100%;
+  margin: 0;
+  margin-bottom: 12rem;
+  color: var(--c10two);
+}
+
 /*! ct__card */
 
 .ct__card {
@@ -779,7 +1099,7 @@ a {
 .ct__card input {
   z-index: 2;
   position: relative;
-  width: 108rem;
+  width: 90rem;
   height: 24rem;
   border: 1px solid var(--c10one);
   background-color: transparent;
@@ -792,10 +1112,19 @@ a {
   color: var(--c10one);
 }
 
+.ct__card form {
+  display: flex;
+  justify-content: space-between;
+  grid-column: 1 / 3;
+  width: 100%;
+  border: none;
+  background-color: transparent;
+}
+
 .ct__card button {
   z-index: 2;
   position: relative;
-  width: 170rem;
+  width: 90rem;
   height: 24rem;
   display: flex;
   align-items: center;
@@ -807,6 +1136,11 @@ a {
   text-align: center;
   letter-spacing: -0.04em;
   border: none;
+}
+
+.ct__card button.cancel {
+  background-color: var(--c10one);
+  opacity: 0.75;
 }
 
 /*! ----- ct__widebar ----- */
@@ -879,6 +1213,7 @@ a {
   position: relative;
   z-index: 2;
   width: 265rem;
+  height: 20rem;
   padding: 0 8rem;
   text-align: center;
   background-color: transparent;
@@ -1110,6 +1445,7 @@ a {
 /*! ----- ct__mid-btn ----- */
 
 .ct__mid-btn {
+  position: relative;
   display: block;
   background-color: transparent;
   border: none;
@@ -1151,6 +1487,52 @@ a {
 .ct__mid-btn .treg3 {
   transform-origin: 120rem 13rem;
   animation: rotate360 10s linear infinite;
+}
+
+/*! ct__top-tabs */
+
+.ct__top-tabs {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 24rem;
+}
+
+.ct__top-tab .geometry1,
+.ct__top-tab .geometry2 {
+  fill: none;
+}
+
+.ct__top-tab {
+  background: linear-gradient(90deg, var(--c30) 0%, transparent 100%);
+}
+
+.ct__top-tab.active {
+  background: transparent;
+}
+
+.ct__top-tab span {
+  color: var(--c10one);
+}
+
+.ct__top-tab.active span {
+  color: var(--c60);
+}
+
+.ct__top-tab.active .geometry1,
+.ct__top-tab.active .geometry2 {
+  fill: var(--c10two);
+}
+
+.ct__top-tab .treg1,
+.ct__top-tab .treg2,
+.ct__top-tab .treg3 {
+  display: none;
+}
+
+.ct__top-tab.active .treg1,
+.ct__top-tab.active .treg2,
+.ct__top-tab.active .treg3 {
+  display: block;
 }
 
 /*! ----- burger-btn ----- */
