--- a/player/templates/player/redesign/header.html
+++ b/player/templates/player/redesign/header.html
@@ -35,9 +35,40 @@
 	<script>
 		const csrftoken = '{{ csrf_token }}';
 	</script>
+<!--	<svg width="362" class="border-top" height="194" viewBox="0 0 362 194" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+<!--		<g>-->
+<!--		<path d="M13 7H151L156 2V1H7V7H13Z" fill="var(&#45;&#45;c60)"/>-->
+<!--		<path d="M7 6.99999L151 7L157 1" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M13 1L13 13L1 13" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M7.00001 7L7 151L1 157" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M1 163L7 157L7 169L1 175M1 181L7 175L7 181L1 187M1 193L7 187" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		</g>-->
+<!--		<g>-->
+<!--		<path d="M349 7H211L206 2V1H355V7H349Z" fill="var(&#45;&#45;c60)"/>-->
+<!--		<path d="M355 6.99999L211 7L205 1" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M349 1L349 13L361 13" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M355 7L355 151L361 157" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M361 163L355 157L355 169L361 175M361 181L355 175L355 181L361 187M361 193L355 187" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		</g>-->
+<!--	</svg>-->
     {% block content %}
     {% endblock %}
-
+<!--	<svg width="362" class="border-bottom" height="194" viewBox="0 0 362 194" fill="none" xmlns="http://www.w3.org/2000/svg">-->
+<!--		<g>-->
+<!--		<path d="M13 7H151L156 2V1H7V7H13Z" fill="var(&#45;&#45;c60)"/>-->
+<!--		<path d="M7 6.99999L151 7L157 1" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M13 1L13 13L1 13" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M7.00001 7L7 151L1 157" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M1 163L7 157L7 169L1 175M1 181L7 175L7 181L1 187M1 193L7 187" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		</g>-->
+<!--		<g>-->
+<!--		<path d="M349 7H211L206 2V1H355V7H349Z" fill="var(&#45;&#45;c60)"/>-->
+<!--		<path d="M355 6.99999L211 7L205 1" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M349 1L349 13L361 13" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M355 7L355 151L361 157" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		<path d="M361 163L355 157L355 169L361 175M361 181L355 175L355 181L361 187M361 193L355 187" stroke="var(&#45;&#45;c10two)"/>-->
+<!--		</g>-->
+<!--	</svg>-->
 </main>
 
 <!-- МОДАЛЬНОЕ МЕНЮ-НАВИГАЦИЯ -->
@@ -104,5 +135,7 @@
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>-->
 <script src="{% static 'redesign/js/header.js' %}?{{ csrf_token }}"></script>
 <script src="{% static 'redesign/js/status.js' %}?{{ csrf_token }}"></script>
+{% block for_scripts_and_css %}
+{% endblock %}
 </body>
 </html>
