--- a/player/templates/player/redesign/header.html
+++ b/player/templates/player/redesign/header.html
@@ -18,6 +18,15 @@
 	  crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="{% static 'redesign/css/style.css' %}?{{ csrf_token }}">
 	<link rel="stylesheet" href="{% static 'redesign/css/cropper.min.css' %}?{{ csrf_token }}">
+	<style>
+		:root {
+		  --c10one: #FFFFFF;
+		  --c10two: #EB9929;
+		  --c60: #28353E;
+		  --c30: #284E64;
+		  --nav: #336380;
+		}
+	</style>
 </head>
 <body>
 
