убран отступ для карандаша в просмотре профиля

--- a/player/templates/player/redesign/view_profile.html
+++ b/player/templates/player/redesign/view_profile.html
@@ -108,7 +108,7 @@
 				</div>
 
 				<div class="ct__s">
-					<h2 class="ct__s-title ct__s-title--about">
+					<h2 class="ct__s-title">
 						<span>о себе:</span>
 					</h2>
 					<p id="player_bio_view" class="ct__s-text" >{% if not char.bio %}{{ user_link }}{% else %}{{ char.bio }}{% endif %}</p>
