--- a/player/templates/player/index.html
+++ b/player/templates/player/index.html
@@ -35,5 +35,7 @@
 
         </div>
     </div>
+    <div align="center" style="margin-top: 20px">Продолжая использование сайта, вы принимаете условия</div>
+    <a align="center" href="/eula">Пользовательского соглашения</a>
 </body>
 </html>
