--- a/player/templates/player/eula.html
+++ b/player/templates/player/eula.html
@@ -97,7 +97,7 @@
 Вы обязуетесь не использовать свой Аккаунт в коммерческих целях, включая, в частности, рекламу, навязывание услуг, передачу любых коммерческих объявлений (предложений о продаже, спам, «писем счастья» и др.)
 <br>
 <h3 align="center">Несовершеннолетние</h3>
-Для получения доступа и/или использования нашего веб-сайта или Игр ваш возраст должен быть не менее 16 лет. Если вы старше 16, но являетесь несовершеннолетним лицом, мы настоятельно рекомендуем вам получить разрешение на доступ и/или использование нашего веб-сайта у вашего родителя или законного представителя.
+Для получения доступа и/или использования нашего веб-сайта ваш возраст должен быть не менее 16 лет. Если вы старше 16, но являетесь несовершеннолетним лицом, мы настоятельно рекомендуем вам получить разрешение на доступ и/или использование нашего веб-сайта у вашего родителя или законного представителя.
 <br>
 <h3 align="center">Прекращение Действия</h3>
 <br>
