--- a/player/templates/player/redesign/player_repost.html
+++ b/player/templates/player/redesign/player_repost.html
@@ -23,7 +23,7 @@
 {% if is_error %}
 <p>Произошла ошибка API VK</p>
 <p>Обычно помогает повторный логин в игре</p>
-<a href="/accounts/logout/" class="btn btn-danger">Выйти из игры</a>
+<a href="/accounts/logout/" class="ct__long-btn">Выйти из игры</a>
 {% endif %}
 {% if repost %}
 {% if now_dtime > need_dtime %}
