--- a/player/templates/player/redesign/view_profile.html
+++ b/player/templates/player/redesign/view_profile.html
@@ -15,7 +15,7 @@
 		</h1>
 		<!-- конец НИКНЕЙМА -->
 
-		<div class="profile__top-wrapper">
+		<div class="profile__top-wrapper" style="height: 200rem;">
 
 			<div class="profile__top-left">
 
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 
-		<div class="profile__tabs-wrapper">
+		<div class="profile__tabs-wrapper" style="height: calc(100vh - 350rem);">
 			<!-- ВКЛАДКА ИНФОРМАЦИЯ -->
 			<div class="profile__info-tab">
 
