--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -223,22 +223,22 @@
 						<!-- редактировать "о себе" -->
 						<button id="bio_edit" class="ct__s-edit ct__square-small-btn" onclick="open_bio()">
 							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M20.8 24H0V0H24V20.8L20.8 24Z" fill="#EB9929"/>
-								<path d="M4.40002 17.2L18 3.6L21.2 6.8L7.60002 20.4H4.40002V17.2Z" stroke="#28353E" stroke-width="3"/>
+								<path d="M20.8 24H0V0H24V20.8L20.8 24Z" fill="var(--c10two)"/>
+								<path d="M4.40002 17.2L18 3.6L21.2 6.8L7.60002 20.4H4.40002V17.2Z" stroke="var(--c60)" stroke-width="3"/>
 							</svg>
 						</button>
 						<!-- отмена редактирования "о себе" -->
 						<button id="bio_cancel" class="ct__s-exit ct__square-small-btn" style="display: none" onclick="close_bio()">
 							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M20.8 24H0V0H24V20.8L20.8 24Z" fill="#EB9929"/>
-								<path d="M3 21L21 3M21 21L3 3" stroke="#28353E" stroke-width="3"/>
+								<path d="M20.8 24H0V0H24V20.8L20.8 24Z" fill="var(--c10two)"/>
+								<path d="M3 21L21 3M21 21L3 3" stroke="var(--c60)" stroke-width="3"/>
 							</svg>
 						</button>
 						<!-- схоранить редактирование "о себе" -->
 						<button id="bio_send" class="ct__s-save ct__square-small-btn" style="display: none" onclick="send_bio()">
 							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M20.8 24H0V0H24V20.8L20.8 24Z" fill="#EB9929"/>
-								<path d="M2 10.8L8.8 17.6L22.4 4" stroke="#28353E" stroke-width="3"/>
+								<path d="M20.8 24H0V0H24V20.8L20.8 24Z" fill="var(--c10two)"/>
+								<path d="M2 10.8L8.8 17.6L22.4 4" stroke="var(--c60)" stroke-width="3"/>
 							</svg>
 						</button>
 						<span>о себе:</span>
