--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -599,7 +599,7 @@ a {
   left: 50%;
   transform: translateX(-50%);
   content: '';
-  background-image: linear-gradient(to right, var(--c60), var(--nav), var(--c60));
+  background-image: linear-gradient(to right, var(--c60), var(--c30), var(--c60));
 }
 
 .nav__item::after {
@@ -1213,8 +1213,230 @@ a {
   outline: none;
 }
 
-.store__nobtn {}
+/*! Actives */
 
+.actives {
+  padding-top: 14rem;
+  padding-bottom: 24rem;
+  height: calc(100vh - 60rem);
+}
+
+.actives__title {
+  margin: 0;
+  margin-bottom: 24rem;
+}
+
+.actives__top-wrapper {
+  margin: 0 auto;
+  margin-bottom: 12rem;
+}
+
+.actives__confirm-btn {
+  margin: 0 auto;
+}
+
+.actives__region-wrapper {
+  margin: 0 auto;
+  width: 312rem;
+  height: 30rem;
+  margin-bottom: 12rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.actives__region {
+}
+
+.actives__region-wrapper > button {
+  display: block;
+  width: 45rem;
+  height: 30rem;
+  margin-left: auto;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.actives__region > button svg {
+  width: 100%;
+  height: 100%;
+}
+
+.actives__table {
+  padding-left: 24rem;
+  height: calc(100vh - 329rem);
+  overflow-y: auto;
+  padding-bottom: 24rem;
+}
+
+/*! ct__two-select-wrapper */
+
+.ct__two-select-wrapper {
+  position: relative;
+  width: 314rem;
+  height: 157rem;
+  padding: 12rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.ct__two-select-wrapper > svg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.ct__two-select-wrapper > label {
+  position: relative;
+  display: flex;
+  width: 288rem;
+  height: 24rem;
+  margin-bottom: 12rem;
+  align-items: center;
+}
+
+.ct__two-select-wrapper > label::after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  content: '';
+  border: 1px solid var(--c10one);
+  opacity: 0.2;
+  pointer-events: none;
+}
+
+.ct__two-select-wrapper > label select {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 13rem;
+  line-height: 14rem;
+  letter-spacing: -0.05em;
+  color: var(--c10one);
+  padding: 0 5rem;
+  border: 0;
+  background-color: var(--c30);
+  color: var(--c10one);
+  outline: none;
+  appearance: none;
+}
+
+.ct__two-select-wrapper > label select:focus {
+  box-shadow: 0 0 1rem 0 var(--c10one);
+}
+
+.ct__two-select-wrapper > label svg {
+  position: absolute;
+  right: 5rem;
+  top: 9rem;
+  width: 13rem;
+  height: 6rem;
+  pointer-events: none;
+}
+
+.ct__two-select-info-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 12rem;
+  width: 100%;
+}
+
+.ct__two-select-wrapper p {
+  position: relative;
+  margin: 0;
+  font-size: 13rem;
+  line-height: 14rem;
+  letter-spacing: -0.05em;
+  color: var(--c10one);
+}
+
+.ct__two-select-wrapper-check {
+  position: relative;
+  margin-bottom: 12rem;
+}
+
+.ct__two-select-wrapper-check label {
+  width: 288rem;
+  height: 24rem;
+  display: flex;
+  align-items: center;
+  font-size: 13rem;
+  line-height: 14rem;
+  justify-content: center;
+}
+
+.ct__two-select-wrapper-check span {
+  width: 20rem;
+  height: 20rem;
+  display: none;
+  margin-right: 12rem;
+}
+
+.ct__two-select-wrapper-check span svg {
+  width: 100%;
+  height: 100%;
+}
+
+.ct__two-select-wrapper-check label > svg {
+  width: 20rem;
+  height: 20rem;
+  display: block;
+  margin-right: 12rem;
+}
+
+.ct__two-select-wrapper-check input:checked + svg {
+  display: none;
+}
+
+.ct__two-select-wrapper-check input:checked ~ span {
+  display: block;
+}
+
+/*! ct__select-region */
+
+.ct__select-region {
+  position: relative;
+  display: block;
+  width: 240rem;
+  height: 14rem;
+}
+
+.ct__select-region select {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 18rem;
+  line-height: 14rem;
+  letter-spacing: -0.04em;
+  color: var(--c10one);
+  padding: 0 5rem;
+  border: 0;
+  background-color: var(--c60);
+  color: var(--c10one);
+  outline: none;
+  appearance: none;
+}
+
+.ct__select-region svg {
+  position: absolute;
+  right: 0;
+  top: 2rem;
+  width: 21rem;
+  height: 11rem;
+  pointer-events: none;
+}
 
 /*! ct__card */
 
@@ -1513,6 +1735,62 @@ a {
   position: absolute;
   top: 0;
   right: 24rem;
+}
+
+.ct__s-text-input {
+  display: flex;
+  height: 24rem;
+  padding-right: 24rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ct__s-text-input label {
+  position: relative;
+  display: flex;
+  width: 60rem;
+  height: 18rem;
+  margin-right: 3rem;
+}
+
+.ct__s-text-input label::before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  content: '';
+  border: 1px solid var(--c10one);
+  opacity: 0.2;
+}
+
+.ct__s-text-input input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 14rem;
+  line-height: 14rem;
+  letter-spacing: -0.04em;
+  color: var(--c10one);
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.ct__s-text-input span {
+  font-size: 14rem;
+  line-height: 14rem;
+  letter-spacing: -0.04em;
+  color: var(--c10one);
+}
+
+.ct__s-text-input span:last-of-type {
+  margin-left: auto;
 }
 
 /*! ----- ct__decor-border ----- */
