--- a/state/templates/state/gov/government.html
+++ b/state/templates/state/gov/government.html
@@ -98,6 +98,9 @@
                                 }
                             </style>
                             <li><a data-toggle="tab" class="green_hover" href="#new_bill">Новый</a></li>
+                                {% if has_custom_right %}
+                            <li><a data-toggle="tab" class="green_hover" href="#custom_rights">Министр</a></li>
+                                {% endif %}
                             {% endif %}
                             <li><a data-toggle="tab" href="#bills_history">История</a></li>
                             <li><a data-toggle="tab" href="#parliament">Парламент</a></li>
@@ -111,6 +114,9 @@
                                 <!--новый законопроект-->
                                 {% if is_deputate %}
                                     {% new_bill player parliament %}
+                                    {% if has_custom_right %}
+                                        {% custom_rights player parliament.state %}
+                                    {% endif %}
                                 {% endif %}
                                 <!--история законопроектов-->
                                 {% bills_history player parliament %}
